fix some spacing styles on about page

--- a/public/stylesheets/sass/aboutsass.scss
+++ b/public/stylesheets/sass/aboutsass.scss
@@ -108,6 +108,12 @@ $orange-transparancy-hover: 0.9;
 .about-principles {
 	background: $light-orange;
 	color: $white;
+	padding: 50px 10px;
+
+	@media (min-width: $screen-sm-min) {
+		padding: 0;
+		margin-top: -10px;
+	}
 	h2 {
 		color: $white;
 
@@ -210,11 +216,18 @@ $orange-transparancy-hover: 0.9;
 
 	&-members {
 		h3, .title {
+			
+			font-weight: 300;
+			margin-bottom: 5px;
+		}
+
+		h3 {
 			font-family: 'Roboto Slab';
 		}
 
 		.title {
-			margin-bottom: 20px;
+			margin-bottom: 15px;
+			font-family: 'Roboto';
 		}
 
 		color: $gray;
